--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+#Ignore c9
+.c9/
+
+#Ignore idea
+.idea/
+
 # Ignore bundler config.
 /.bundle
 
